--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "schengen_calculator"
+name = "schengen-calculator"
 version = "0.1.0"
 description = ""
-authors = ["Jordan Begg"]
+authors = ["Jordan Begg <jordansbegg@outlook.com>"]
 
 [tool.poetry.dependencies]
-python = "3.9"
+python = "^3.9"
 Flask = "^2.0.2"
 Flask-Migrate = "^3.1.0"
 Flask-Login = "^0.5.0"
@@ -13,8 +13,14 @@ Flask-SQLAlchemy = "^2.5.1"
 Flask-Bootstrap = "^3.3.7"
 Flask-WTF = "^1.0.0"
 pandas = "^1.3.5"
+python-dotenv = "^0.19.2"
+Flask-Mail = "^0.9.1"
+email-validator = "^1.1.3"
+PyJWT = "^2.3.0"
+pyodbc = "^4.0.32"
 
 [tool.poetry.dev-dependencies]
+black = {version = "^21.12b0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
