--- a/.github/workflows/merge_dev.yml
+++ b/.github/workflows/merge_dev.yml
@@ -24,5 +24,5 @@ jobs:
             username: ${{ secrets.REGISTRY_USERNAME }}
             password: ${{ secrets.REGISTRY_PASSWORD }}
         - run: |
-            docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/schengen_calculator:latest
-            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/schengen_calculator:latest
+            docker build . -t ${{ secrets.REGISTRY_LOGIN_SERVER }}/schengen_calculator:dev
+            docker push ${{ secrets.REGISTRY_LOGIN_SERVER }}/schengen_calculator:dev
