--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ Flask-Mail = "^0.9.1"
 email-validator = "^1.1.3"
 PyJWT = "^2.3.0"
 pyodbc = "^4.0.32"
+bootlets = "^0.0.2"
+Flask-Moment = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 black = {version = "^21.12b0", allow-prereleases = true}
